list要素取得方法を変更
listから要素を取得する際、index指定からgetFirst()に変更しました。これによりコードの意図がより明確になり、可読性が向上します。テストロジックへの影響も確認済みです。